.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: GoodHamburger-api
  namespace: GoodHamburger
  labels:
    app: GoodHamburger-api
    version: v1
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: GoodHamburger-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: GoodHamburger-api
        version: v1
    spec:
      containers:
        - name: api
          image: GoodHamburger-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
