.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: GoodHamburger-api
  namespace: GoodHamburger
  labels:
    app: GoodHamburger-api
spec:
  type: ClusterIP
  selector:
    app: GoodHamburger-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
